gitops/config/prometheus/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitoring.nieri0x73.com
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: monitoring-tls
      hosts:
        - monitoring.nieri0x73.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - monitoring.nieri0x73.com
