gitops/config/prometheus/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - monitoring.nieri0x73.com
  gateways:
    - monitoring
  http:
    - route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
